--- a/style.css
+++ b/style.css
@@ -1,26 +1,24 @@
-@charset "UTF-8";
-
 * {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
 }
 
 body {
-    background-color: rgb(204, 167, 240);
+    background-color: #acacff;
 
 }
 
 main {
     background-color: white;
-    width: 500px;
+    width: 560px;
     margin: auto;
     padding: 10px;
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.466);
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.473);
 }
 
 h1 {
     font-size: 2em;
-    color: rgb(58, 0, 112);  
+    color: rgb(58, 0, 112);
 }
 
 h2 {
@@ -29,7 +27,6 @@ h2 {
 }
 
 img.lado {
-    /*display: block;*/
     float: right;
 }
 
